# Simulated_UPI

./: .gitignore  README.md  stack.yaml  upi-payment-sdk.cabal
src/: Reconciliation.hs  SDK.hs  Transaction.hs  Types.hs  UPI.hs
test/: ReconciliationSpec.hs  SDKSpec.hs  Spec.hs  TransactionSpec.hs  TypesSpec.hs  UPISpec.hs
